Fixed style issue with overflow scroll

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,6 @@ img {
   -moz-box-shadow: 0 0 5px #999;  
   -webkit-box-shadow: 0 0 5px #999;
   box-shadow: 0 0 5px #999;
-  overflow: scroll;
 }
 
 .front {
